# TSorchestra

./: .gitignore  LICENSE  README.md  pyproject.toml
cli/: eval.sh  slsqp_ensemble_eval.sh
cli/ablations/: additional_models_eval.sh  model_choice_eval.sh  random_metric_eval.sh
cli/main/: slsqp_ensemble_eval.sh
cli/utils/: utils.sh
conf/: config.yaml
conf/data/: dataset.yaml  econ_fin.yaml  energy.yaml  healthcare.yaml  medium_long.yaml  nature.yaml  sales.yaml  short.yaml  transport.yaml  web_cloudops.yaml
conf/ensemble/: slsqp.yaml
conf/imputation/: leaves_missing_values.yaml  rolling_mean_value.yaml
conf/logging/: debug.yaml
conf/model/: chronos.yaml  flowstate.yaml  moirai.yaml  sundial.yaml  timesfm.yaml  toto.yaml
conf/seed/: seed_42.yaml
notebooks/: configs.ipynb  results.ipynb
notebooks/ablations/: additional_models.ipynb  llm_vote_ensemble_variance.ipynb  model_choice.ipynb  random_optimization_metric_ensemble.ipynb
notebooks/misc/: scratch.ipynb
pipeline/: eval.py
results/all_results/SLSQPEnsemble_3-models_chronos-flowstate-timesfm_opt-mae_1-windows/: all_results.csv
results/all_results/SLSQPEnsemble_3-models_moirai-sundial-toto_opt-mae_1-windows/: all_results.csv
results/all_results/SLSQPEnsemble_3-models_moirai-sundial-toto_opt-random_1-windows/: all_results.csv
results/all_results/TSOrchestra/: all_results.csv
results/llm_vote_ensemble/: all_data_combined.csv
src/: __init__.py
src/data/: dataset.py  evaluator.py  utils.py
src/models/: __init__.py
src/utils/: __init__.py  enums.py  path.py
(+620 files in other folders)
